--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,7 @@
             }
         }
     },
-    "postCreateCommand": "sudo apt-get update && sudo apt-get install -y build-essential libprotobuf-dev protobuf-compiler",
+    "postCreateCommand": "sudo apt-get update && sudo apt-get install -y build-essential redis-server libprotobuf-dev protobuf-compiler",
     "containerEnv": {
         "RONDB_PATH": "/workspaces/pink/rondb-22.10.5-linux-glibc2.28-arm64_v8"
         // Do this manually:
