--- a/.github/workflows/build_test_push.yaml
+++ b/.github/workflows/build_test_push.yaml
@@ -77,10 +77,18 @@ jobs:
           COMPOSE_NETWORK=$(docker network list | grep rondb | awk '{print $2}')
           docker network connect $COMPOSE_NETWORK $CONTAINER_NAME
 
-      - name: Run Rondis
+      - name: Run Rondis server
         run: |
           docker exec -i $CONTAINER_NAME bash -c \
             "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/tmp/rondb/lib && pink/rondis/rondis 6379 mgmd_1:1186 2 &"
+
+      # Running this multiple times to check for memory leaks and that overwrites/updates/deletes work
+      - name: Run tests multiple times
+        run: |
+          for i in {1..100}; do
+            docker exec -i $CONTAINER_NAME bash -c "pink/rondis/tests/get_set.sh $((i % 2))"
+            echo "Success in run $i"
+          done
 
       - name: Run Redis benchmark
         run: docker exec -i $CONTAINER_NAME bash -c "redis-benchmark -t get,set -c 2"
