Log NdbError message (#9)
* Always log NdbError message
* Add NdbError message to response
* Print Redis server logs in CI
* Renamed "interactions" -> "operations"
* Avoid unnecessary printfs

--- a/.github/workflows/build_test_push.yaml
+++ b/.github/workflows/build_test_push.yaml
@@ -17,6 +17,8 @@ jobs:
       IMAGE_NAME: rondis:latest
       CONTAINER_NAME: rondis
       RONDIS_PORT: 6379
+      DOCKER_WORK_DIR: /usr/src/app
+      LOCAL_RONDIS_LOG: /tmp/rondis_server.log
     steps:
       - uses: actions/checkout@v4
         with:
@@ -48,8 +50,6 @@ jobs:
           tar xfz /tmp/temp_tarball.tar.gz -C $RONDB_PATH --strip-components=1
         
       - name: Create Rondis environment
-        env:
-          DOCKER_WORK_DIR: /usr/src/app
         run: |
           docker run -d \
             --name=$CONTAINER_NAME \
@@ -79,16 +79,21 @@ jobs:
 
       - name: Run Rondis server
         run: |
-          docker exec -i $CONTAINER_NAME bash -c \
-            "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/tmp/rondb/lib && pink/rondis/rondis 6379 mgmd_1:1186 2 &"
+          docker exec -w $DOCKER_WORK_DIR -e LD_LIBRARY_PATH=/tmp/rondb/lib \
+            -t $CONTAINER_NAME pink/rondis/rondis 6379 mgmd_1:1186 2 > $LOCAL_RONDIS_LOG &
 
       # Running this multiple times to check for memory leaks and that overwrites/updates/deletes work
       - name: Run tests multiple times
         run: |
           for i in {1..100}; do
-            docker exec -i $CONTAINER_NAME bash -c "pink/rondis/tests/get_set.sh $((i % 2))"
+            docker exec -w $DOCKER_WORK_DIR -i $CONTAINER_NAME bash -c \
+              "pink/rondis/tests/get_set.sh $((i % 2))"
             echo "Success in run $i"
           done
+
+      - name: Show Rondis logs
+        if: always()
+        run: cat $LOCAL_RONDIS_LOG
 
       - name: Run Redis benchmark
         run: docker exec -i $CONTAINER_NAME bash -c "redis-benchmark -t get,set -c 2"
