Fix GETting multi-row values (#11)
* Always check errors using getNdbError()
* Compare hashes in bash tests instead of full values
FIXES:
* Multi-value-row fetching: use different memory for each row
* Multi-value-row fetching: use clean struct for every fetch (place fetch into separate func)
* Calculate number of value rows correctly in SET
* Using uint8 for type safety when read/writing value lengths from buffers
* Usage of auto-increment for rondb_key; use SQL's AUTO_INCREMENT

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,8 +32,8 @@
         }
     },
     "containerEnv": {
-        "RONDB_PATH": "/usr/src/app/rondb-22.10.5-linux-glibc2.28-arm64_v8"
-        // Do this manually:
-        // export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/src/app/rondb-22.10.5-linux-glibc2.28-arm64_v8/lib
+        "RONDB_PATH": "/usr/src/app/rondb-22.10.5-linux-glibc2.28-arm64_v8",
+        // This assumes that the RonDB tarball is placed the root of the workspace folder
+        "LD_LIBRARY_PATH": "/usr/src/app/rondb-22.10.5-linux-glibc2.28-arm64_v8/lib"
     }
 }
