Added Mac build to CI

--- a/.github/workflows/build_test_push.yaml
+++ b/.github/workflows/build_test_push.yaml
@@ -9,7 +9,16 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
+  build-pink-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build
+        run: cd pink && make example
+
   build-and-run-redis-benchmark:
+    needs: [build-pink-macos]
     runs-on: ubuntu-latest
     env:
       RONDB_TARBALL_URI: https://repo.hops.works/master/rondb-22.10.5-linux-glibc2.28-x86_64.tar.gz
