Fix protobuf compilation for Mac

--- a/pink/Makefile
+++ b/pink/Makefile
@@ -6,9 +6,13 @@ LDFLAGS= -lpthread
 else
 LDFLAGS= -lpthread -lrt
 endif
+
 CXXFLAGS= -g -std=c++11 -fno-builtin-memcmp -pipe -fPIC
 ifeq ($(shell uname -m), x86_64)
-    CXXFLAGS += -msse -msse4.2
+  CXXFLAGS += -msse -msse4.2
+endif
+ifeq ($(UNAME_S),Darwin)
+  CXXFLAGS += -I/opt/homebrew/include
 endif
 
 PROFILING_FLAGS=-pg
@@ -20,7 +24,11 @@ DEBUG_LEVEL?=0
 NO_PB?=0
 
 ifeq ($(NO_PB),0)
-  LDFLAGS+= -lprotobuf
+  ifeq ($(UNAME_S),Darwin)
+    LDFLAGS += -L/opt/homebrew/lib
+  else
+    LDFLAGS+= -lprotobuf
+  endif
 endif
 
 ifeq ($(MAKECMDGOALS),dbg)
