--- a/.github/workflows/build_test_push.yaml
+++ b/.github/workflows/build_test_push.yaml
@@ -24,7 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RONDB_TARBALL_URI: https://repo.hops.works/master/rondb-22.10.5-linux-glibc2.28-x86_64.tar.gz
-      RONDB_PATH: /tmp/rondb
+      RONDB_DOCKER_DIR: /tmp/rondb-docker
+      RONDB_PATH: /tmp/rondb-docker/rondb
       IMAGE_NAME: rondis:latest
       CONTAINER_NAME: rondis
       RONDIS_PORT: 6379
@@ -35,6 +36,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Clone rondb-docker
+        env:
+          RONDB_DOCKER_DIR: /tmp/rondb-docker
+        run: git clone -b release-0.7 https://github.com/logicalclocks/rondb-docker.git $RONDB_DOCKER_DIR
+
       - name: Download RonDB
         run: |
           wget $RONDB_TARBALL_URI -O /tmp/temp_tarball.tar.gz
@@ -42,12 +48,10 @@ jobs:
           tar xfz /tmp/temp_tarball.tar.gz -C $RONDB_PATH --strip-components=1
 
       - name: Run rondb-docker
-        env:
-          RONDB_DOCKER_DIR: /tmp/rondb-docker
         run: |
-            git clone -b release-0.7 https://github.com/logicalclocks/rondb-docker.git $RONDB_DOCKER_DIR
+            # The script expects a relative path to the tarball
             cd $RONDB_DOCKER_DIR && ./build_run_docker.sh -d \
-              --rondb-tarball-path $RONDB_PATH \
+              --rondb-tarball-path ./rondb \
               --size small \
               --num-mgm-nodes 1 \
               --node-groups 1 \
