--- a/.github/workflows/build_test_push.yaml
+++ b/.github/workflows/build_test_push.yaml
@@ -26,7 +26,8 @@ jobs:
       RONDB_VERSION: 22.10.5
       RONDB_TARBALL_URI: https://repo.hops.works/master/rondb-22.10.5-linux-glibc2.28-x86_64.tar.gz
       RONDB_DOCKER_DIR: /tmp/rondb-docker
-      RONDB_PATH: /tmp/rondb-docker/rondb
+      RONDB_TARBALL_FILE: rondb.tar.gz
+      RONDB_PATH: /tmp/rondb
       IMAGE_NAME: rondis:latest
       CONTAINER_NAME: rondis
       RONDIS_PORT: 6379
@@ -42,15 +43,16 @@ jobs:
 
       - name: Download RonDB
         run: |
-          wget $RONDB_TARBALL_URI -O /tmp/temp_tarball.tar.gz
+          wget $RONDB_TARBALL_URI -O $RONDB_DOCKER_DIR/$RONDB_TARBALL_FILE
           mkdir -p $RONDB_PATH
-          tar xfz /tmp/temp_tarball.tar.gz -C $RONDB_PATH --strip-components=1
+          tar xfz $RONDB_DOCKER_DIR/$RONDB_TARBALL_FILE -C $RONDB_PATH --strip-components=1
 
       - name: Run rondb-docker
         run: |
+            cd $RONDB_DOCKER_DIR
             # The script expects a relative path to the tarball
-            cd $RONDB_DOCKER_DIR && ./build_run_docker.sh -d \
-              --rondb-tarball-path ./rondb \
+            ./build_run_docker.sh -d \
+              --rondb-tarball-path ./$RONDB_TARBALL_FILE \
               --rondb-version $RONDB_VERSION \
               --size small \
               --num-mgm-nodes 1 \
